jump bug on mobile try vh again

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,13 +1,14 @@
 html, body {
-    height: 100vh;
+    height: 100%;
     margin:0px;
 }
 
 #wrapper {
     background-image: url('/images/background.jpg');
-    min-height: 100%;
+    min-height: 100vh;
     margin: 0px;
     background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 .headerNavBar {
